--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -2,7 +2,7 @@ name: build and push images
 
 on:
   push:
-    branches: ['master']
+    branches: ['master', 'postgre-17']
 
 jobs:
   build-and-push-image:
